# harness_hack_12jun2026

./: .env.example  .gitignore  README.md  api.py  orchestrator.py  pipeline.py  pyproject.toml  run_real.py  runstore.py
agents/: __init__.py  architect.py  scout.py  strategist.py
data/turnout/: README.md  build.py
data/turnout/processed/: precinct_turnout.csv
guild_adapter/: __init__.py  client.py  config.py  file_client.py  http_client.py  integration.py  manifest.py  sink.py
mocks/: __init__.py  fixtures.py  slate.sample.json
plans/: campaign-agent-brief.md  campaign-agent-coding-plan.md
schemas/: __init__.py  models.py
tests/: conftest.py  test_api.py  test_architect_draft.py  test_geo.py  test_guild_adapter.py  test_orchestrator.py  test_scout_cluster.py  test_strategist.py  test_turnout.py  test_weather.py
tools/: __init__.py  geo.py  news.py  social.py  turnout.py  weather.py
tools/data/: social.sample.json
tools/resources/: news.sample.json
ui/: README.md  package-lock.json  package.json  tailwind.config.ts
ui/docs/frontend/: plan.md
ui/docs/improve-focus/: plan.md
ui/docs/landing/: plan.md
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/mock/runs/: route.ts
ui/src/app/api/mock/runs/[run_id]/: route.ts
ui/src/app/api/mock/runs/[run_id]/events/: route.ts
ui/src/app/api/mock/slate/: route.ts
ui/src/app/runs/[run_id]/: page.tsx
ui/src/app/runs/[run_id]/slate/: page.tsx
ui/src/app/runs/[run_id]/slate/[issue_id]/: page.tsx
ui/src/components/ui/: AnimatedCard.tsx  Badge.tsx  CTAButton.tsx  FocusRing.tsx  StatusPill.tsx
ui/src/lib/: animations.ts  api.ts  constants.ts  openui-library.tsx  types.ts
ui/src/lib/fixtures/: progress-events.ts  slate.sample.json
(+1 files in other folders)
