[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campaign-copilot"
version = "0.1.0"
description = "Campaign copilot hackathon project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "feedparser",
    "python-dotenv",
    "anthropic",
    "pandas",
    "duckdb",
]

[project.optional-dependencies]
guild = [
    "httpx",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools]
py-modules = ["api", "orchestrator", "runstore"]

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*", "mocks*", "agents*", "tools*", "guild_adapter*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.package-data]
tools = ["data/*.json", "resources/*.json"]
